removed dependency on dom4j